--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "@/data/*": ["data/*"],
       "@/layouts/*": ["layouts/*"],
       "@/css/*": ["css/*"],
+      "@/lib/utils/*": ["lib/utils/*"],
       "contentlayer/generated": ["./.contentlayer/generated"]
     },
     "plugins": [
