--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "next dev",
-    "dev": "cross-env INIT_CWD=$PWD next dev",
+    "dev": "cross-env INIT_CWD=PWD next dev",
     "build": "cross-env INIT_CWD=$PWD next build && cross-env NODE_OPTIONS='--experimental-json-modules' node ./scripts/postbuild.mjs",
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
@@ -30,7 +30,7 @@
     "next": "14.2.1",
     "next-contentlayer2": "0.4.4",
     "next-themes": "^0.3.0",
-    "pliny": "0.2.0",
+    "pliny": "^0.2.0",
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
