--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
+    "@vercel/analytics": "^1.3.1",
     "autoprefixer": "^10.4.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
