--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@headlessui/react": "1.7.19",
     "@next/bundle-analyzer": "14.2.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
     "@vercel/analytics": "^1.3.1",
